Fix stats on mobile

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,6 +1,6 @@
+@import "styles/additional_pieces";
 @import "styles/landwind";
 @import "styles/colors";
-@import "styles/mixins";
 
 h3, p, .underline-links {
   a {
@@ -42,12 +42,4 @@ h3, p, .underline-links {
   .built-with a {
     color: $purpleTextColor500;
   }
-}
-
-.mt-12 {
-  @include mt(12);
-}
-
-.space-y-2 > :not([hidden]) ~ :not([hidden]) {
-  @include spaceY(2);
 }
